--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sujonbiswasdev/my-portfolio-website.git"
+    "url": "git+https://github.com/sujonbiswasdev/my-portfolio-website.git",
+    "dev":"npx tsx watch src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/sujonbiswasdev/my-portfolio-website#readme",
   "devDependencies": {
+    "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/pg": "^8.16.0",
     "prisma": "^7.2.0",
@@ -29,6 +31,7 @@
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "pg": "^8.16.3"
   }
 }
