--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL='postgresql://neondb_owner:npg_eYluHt0na6xN@ep-steep-bar-ahvsjxdh-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+
+BETTER_AUTH_SECRET=j5PRgd8nbdaO5cJpJ23dyPuI7Mg7caRn
+BETTER_AUTH_URL=http://localhost:3000 # Base URL of your app
+
