--- a/.env
+++ b/.env
@@ -10,3 +10,6 @@ DATABASE_URL='postgresql://neondb_owner:npg_eYluHt0na6xN@ep-steep-bar-ahvsjxdh-p
 BETTER_AUTH_SECRET=j5PRgd8nbdaO5cJpJ23dyPuI7Mg7caRn
 BETTER_AUTH_URL=http://localhost:3000 # Base URL of your app
 APP_URL=http://localhost:4000
+
+APP_USER='sujonbiswasdev@gmail.com'
+APP_PASS='zmar cgfm gmjs rbus'
